Delete method and refactoring